# FragmentalEngine

./: CMakeLists.txt  README.md
examples/FragTest/: CMakeLists.txt  main.cpp  testPackage.h
fragmentalEngine/: CMakeLists.txt
fragmentalEngine/include/frag/: Core.h
include/frag/: Core.h  Log.h
include/frag/package/: IPackage.h
include/frag/render/: IRenderModule.h  RenderStructs.h  Renderer.h
include/frag/render/modules/: OpenGlRenderModule.h
src/: Core.cpp
src/package/: IPackage.cpp
